BAH-4450 : added fix for scrollbar issue under observation tab

--- a/packages/bahmni-design-system/src/molecules/collapsibleRowGroup/styles/CollapsibleRowGroup.module.scss
+++ b/packages/bahmni-design-system/src/molecules/collapsibleRowGroup/styles/CollapsibleRowGroup.module.scss
@@ -4,6 +4,11 @@
 
 .container {
   width: 100%;
+  :global(html:has([data-separator]) #main-display-area) & {
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    scroll-padding-bottom: $spacing-05;
+  }
 }
 
 .accordion {
@@ -13,10 +18,7 @@
   border-block: none !important;
   width: 100%;
   max-width: 100%;
-  overflow-x: hidden;
-  :global(html:has([data-separator]) #main-display-area) & {
-    overflow-x: auto;
-  }
+  overflow: visible;
   div:last-child {
     padding-block: 0;
   }
@@ -42,7 +44,8 @@
   max-width: 100%;
   box-sizing: border-box;
   :global(html:has([data-separator]) #main-display-area) & {
-    min-width: 62.5rem;
+    min-width: 45rem;
+    padding-block-end: $spacing-05;
   }
 }
 
